samples/_failures_safe/1761437313_1383e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c459288c.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_c459288c.c:191:5: error: expected expression at end of input
  191 |     for (int i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_c459288c.c:191:5: error: expected declaration or statement at end of input
